1.0.0-rc1: * Compile plugin with Java 11 * Upgrade to tscfg 0.9.96